#23 Add, Add Button and some improvment ui

--- a/src/Frontend/moviereminder/src/app/app.component.html
+++ b/src/Frontend/moviereminder/src/app/app.component.html
@@ -1,12 +1,18 @@
 <div id="body">
-  <header id="header"></header>
+  <header id="header">
+    <div id="text">
+      <p>Movie Reminder</p>
+    </div>
+  </header>
   <!-- <aside id="aside"></aside> -->
   <main id="main">
-    <div class="add-button">
+
+    <div id="add-button">
       <button mat-fab color="primary" aria-label="Add Movie">
-        <mat-icon>Add</mat-icon>
+        <mat-icon>add</mat-icon>
       </button>
     </div>
+
   </main>
   <footer id="footer"></footer>
 </div>
